--- a/tailfox/templates/loginpage.html
+++ b/tailfox/templates/loginpage.html
@@ -19,6 +19,7 @@
       justify-content: center;
       align-items: center;
       overflow: hidden;
+      width: 100%;
     }
 
     /* ---------------- LOGIN CARD ---------------- */
@@ -128,6 +129,8 @@
   </style>
 </head>
 <body>
+
+  
 
   <!-- CLOSE BUTTON -->
   <a href="{% url 'index' %}"><i class="fa fa-close"></i></a>
